Adds plugboard functionality to the Enigma machine