@@ -1,37 +1,97 @@
 package main.java.application;
 
 import main.java.enigma.Enigma;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Scanner;
-import java.util.Set;
 
+import java.util.*;
 
 
 public class EnigmaMachineApp {
     public static boolean validRotors(String[] rotors) {
         if (rotors.length != 3) {
+            System.out.println("✖ Please enter exactly 3 rotors (you provided " + rotors.length + ").");
             return false;
         }
 
-        Set<String> validRotors = new HashSet<>(Set.of("I", "II", "III", "IV", "V"));
-        Set<String> rotorSet = new HashSet<>(Arrays.asList(rotors));
+        Set<String> validRotors = Set.of("I", "II", "III", "IV", "V");
+        Set<String> inputRotors = new HashSet<>(Arrays.asList(rotors));
 
-        return rotorSet.size() == 3 && validRotors.containsAll(rotorSet);
+        // Check for duplicates
+        if (inputRotors.size() != 3) {
+            System.out.println("✖ Duplicate rotors detected. Each rotor must be unique.");
+            return false;
+        }
+
+        // Check for invalid rotor types
+        if (!validRotors.containsAll(inputRotors)) {
+            List<String> invalid = inputRotors.stream()
+                    .filter(r -> !validRotors.contains(r))
+                    .toList();
+            System.out.printf("✖ Invalid rotor(s): %s. Valid options: I, II, III, IV, V.%n", invalid);
+            return false;
+        }
+
+        return true;
     }
 
 
     public static boolean validPositions(char[] positions) {
-        return positions.length == 3 &&
-                new String(positions).chars().allMatch(c -> c >= 'A' && c <= 'Z');
+        if (positions.length != 3) {
+            System.out.println("✖ Please enter exactly 3 starting positions (e.g., 'ABC').");
+            return false;
+        }
+
+        for (char c : positions) {
+            if (c < 'A' || c > 'Z') {
+                System.out.printf("✖ Invalid character '%c' in positions. Use uppercase A-Z only.%n", c);
+                return false;
+            }
+        }
+
+        return true;
     }
 
 
     public static boolean validReflector(String reflector) {
-        return reflector.equals("B") ||
-                reflector.equals("C") ||
-                reflector.equals("B THIN") ||
-                reflector.equals("PAPER ENIGMA");
+        Set<String> validReflectors = Set.of("B", "C", "B THIN", "PAPER ENIGMA");
+        if (!validReflectors.contains(reflector)) {
+            System.out.printf("✖ Invalid reflector '%s'. Choose from: B, C, B THIN, PAPER ENIGMA.%n", reflector);
+            return false;
+        }
+        return true;
+    }
+
+
+    private static boolean validPlugboard(String input) {
+        if (input == null || input.isEmpty()) return true;
+
+        String[] pairs = input.split("\\s+");
+        Set<Character> usedChars = new HashSet<>();
+
+        for (String pair : pairs) {
+            if (pair.length() != 2) {
+                System.out.println("Invalid pair: " + pair + " (must be 2 letters)");
+                return false;
+            }
+            char c1 = pair.charAt(0);
+            char c2 = pair.charAt(1);
+
+            if (c1 == c2) {
+                System.out.println("Pair " + pair + ": Letter mapped to itself");
+                return false;
+            }
+            if (usedChars.contains(c1) || usedChars.contains(c2)) {
+                System.out.println("Pair " + pair + ": Duplicate letter");
+                return false;
+            }
+            usedChars.add(c1);
+            usedChars.add(c2);
+        }
+
+        if (usedChars.size() > 20) { // 10 pairs max (20 letters)
+            System.out.println("Maximum 10 plugboard pairs allowed");
+            return false;
+        }
+        return true;
     }
 
 
@@ -40,6 +100,7 @@ public class EnigmaMachineApp {
         String[] rotors;
         String reflector;
         char[] positions;
+        String plugboardPairs;
 
         System.out.println("\nWelcome to the ENIGMA MACHINE\n");
 
@@ -51,7 +112,7 @@ public class EnigmaMachineApp {
         } while (!validRotors(rotors));
 
         do {
-            System.out.println("\nEnter initial rotor positions (3 letters, e.g., 'ABC'): ");
+            System.out.println("\nEnter the starting rotor positions (3 letters, e.g., 'ABC'): ");
             positions = scanner.nextLine().toUpperCase().toCharArray();
         } while (!validPositions(positions));
 
@@ -60,10 +121,15 @@ public class EnigmaMachineApp {
             reflector = scanner.nextLine().toUpperCase();
         } while (!validReflector(reflector));
 
+        do {
+            System.out.println("\nEnter plugboard pairs if you want (up to 10 pairs, separated by spaces, e.g., 'AB CD'):");
+            plugboardPairs = scanner.nextLine().toUpperCase().replaceAll("[^A-Z ]", "");
+        } while (!validPlugboard(plugboardPairs));
+
         System.out.println("\nEnter a message to cipher: ");
         char[] message = scanner.nextLine().toUpperCase().toCharArray();
 
-        String encodedMessage = new Enigma(rotors, positions, reflector).cipher(message);
+        String encodedMessage = new Enigma(rotors, positions, reflector, plugboardPairs).cipher(message);
         System.out.printf("%nHere's your encoded/decoded message:%n%s%n%n", encodedMessage);
     }
 
